# sciona-atoms-fintech

./: README.md  REMEDIATION.md  pyproject.toml
data/: audit_manifest.json
tests/: test_hftbacktest_atoms.py  test_hftbacktest_import_smoke.py  test_import_smoke.py  test_institutional_quant_engine_almgren_chriss_import_smoke.py  test_institutional_quant_engine_almgren_chriss_v2_import_smoke.py  test_institutional_quant_engine_avellaneda_stoikov_d12_import_smoke.py  test_institutional_quant_engine_avellaneda_stoikov_import_smoke.py  test_institutional_quant_engine_copula_dependence_import_smoke.py  test_institutional_quant_engine_dynamic_hedge_import_smoke.py  test_institutional_quant_engine_evt_model_import_smoke.py  test_institutional_quant_engine_fractional_diff_import_smoke.py  test_institutional_quant_engine_hawkes_process_import_smoke.py  test_institutional_quant_engine_heston_model_import_smoke.py  test_institutional_quant_engine_hierarchical_risk_parity_import_smoke.py  test_institutional_quant_engine_kalman_filter_import_smoke.py  test_institutional_quant_engine_kalman_filter_proc_import_smoke.py  test_institutional_quant_engine_order_flow_imbalance_import_smoke.py  test_institutional_quant_engine_pin_model_import_smoke.py  test_institutional_quant_engine_pubrev_001_review_bundle.py  test_institutional_quant_engine_queue_estimator_import_smoke.py  test_institutional_quant_engine_remediation_behavior.py  test_institutional_quant_engine_supply_chain_import_smoke.py  test_institutional_quant_engine_triangular_arbitrage_import_smoke.py  test_license_manifest.py  (+12 more)
(+156 files in other folders)
